[gd_scene load_steps=8 format=3 uid="uid://ct3020tu2w32g"]

[ext_resource type="PackedScene" uid="uid://cl4x0xyild4k5" path="res://boundary.tscn" id="1_7y6uc"]
[ext_resource type="Script" path="res://world.gd" id="1_n00kx"]
[ext_resource type="PackedScene" uid="uid://cnfnax356vh33" path="res://ai_paddle.tscn" id="2_gtsai"]
[ext_resource type="Script" path="res://Control.gd" id="2_qmbje"]
[ext_resource type="PackedScene" uid="uid://bdptcvgfv13qa" path="res://player_paddle.tscn" id="3_jhuwq"]
[ext_resource type="PackedScene" uid="uid://cgxjwxmc8m2xk" path="res://ball.tscn" id="4_nbnlu"]
[ext_resource type="PackedScene" uid="uid://s2clyiwuypk0" path="res://endzone.tscn" id="5_vxff4"]

[node name="World" type="Node2D"]
script = ExtResource("1_n00kx")
metadata/_edit_lock_ = true

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -5.0
offset_top = -10.0
offset_right = -5.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_qmbje")

[node name="Endzones" type="Node" parent="Control"]

[node name="player_endzone" parent="Control/Endzones" instance=ExtResource("5_vxff4")]
position = Vector2(-10, 0)

[node name="ai_endzone" parent="Control/Endzones" instance=ExtResource("5_vxff4")]
position = Vector2(110, 0)

[node name="Boundaries" type="Node" parent="Control"]

[node name="top_boundary" parent="Control/Boundaries" instance=ExtResource("1_7y6uc")]
position = Vector2(50, 1)

[node name="bot_boundary" parent="Control/Boundaries" instance=ExtResource("1_7y6uc")]
position = Vector2(50, 49)

[node name="Paddles" type="Node" parent="Control"]

[node name="ai_paddle" parent="Control/Paddles" instance=ExtResource("2_gtsai")]
position = Vector2(99, 25)

[node name="player_paddle" parent="Control/Paddles" instance=ExtResource("3_jhuwq")]
position = Vector2(1, 25)

[node name="Ball" type="Node" parent="Control"]

[node name="ball" parent="Control/Ball" instance=ExtResource("4_nbnlu")]
position = Vector2(50, 25)
